/* eslint no-undef: 'off'*/

import React from 'react';
import {shallow, mount} from 'enzyme';
import {HeaderPure} from './index';

jest.mock('styles/styler');

describe('Header Pure', () => {
    const map = {};
    window.addEventListener = jest.genMockFn().mockImplementation((event, cb) => {
        map[event] = cb;
    });

    const hocProps = {
        classNames:
        {
            '.header-0-1.shrinkedHeader': 'header-0-1',
            fixedOnTheTop: 'fixedOnTheTop-0-0',
            header: 'header-0-1',
            headerPadding: 'headerPadding-0-2'
        }
    };

    it('component match expected snapshot', () => {
        expect(shallow(<HeaderPure classNames={hocProps.classNames} />)).toMatchSnapshot();
    });

    it('component with scrolled down document since to "scrollTop: 100" match expected snapshot', () => {
        const wrapper = mount(<HeaderPure classNames={hocProps.classNames} />);
        map.scroll({target: {scrollingElement: {scrollTop: 100} } });
        expect(wrapper).toMatchSnapshot();
    });

    it('component with scrolled down document since to "scrollTop: 24" match expected snapshot', () => {
        const wrapper = mount(<HeaderPure classNames={hocProps.classNames} />);
        map.scroll({target: {scrollingElement: {scrollTop: 24} } });
        expect(wrapper).toMatchSnapshot();
    });
});